<resources>
    <string name="app_name">Movie Searcher</string>
    <string name="search">Search</string>
    <string name="menu_home">Home</string>
    <string name="favourite">favourite</string>
    <string name="menu_slideshow">Ratings</string>
    <string name="nav_header_desc">Avatar</string>
    <string name="nav_header_title">Account Name</string>
    <string name="nav_header_subtitle">Tittle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="demo_movie_description">Пол Эджкомб — начальник блока смертников в тюрьме «Холодная гора», каждый из узников которого однажды проходит «зеленую милю» по пути к месту казни. Пол повидал много заключённых и надзирателей за время работы. Однако гигант Джон Коффи, обвинённый в страшном преступлении, стал одним из самых необычных обитателей блока.</string>
    <string name="new_movies_headline_text">New Movies headline text</string>
    <string name="demo_genre">Боевик, приюклечение</string>
    <string name="year_2020">2020</string>
    <string name="release_date">Release year: </string>
    <string name="rate">Rating </string>
    <string name="rate_demo_6_9">6.9</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title_history">History</string>
    <string name="History">History</string>
    <string name="new_movies">New Movies</string>
    <string name="popular">Popular</string>
    <string name="movie_name">Movie name</string>
    <string name="_2020">2020</string>
    <string name="settings">Settings</string>
    <string name="child_mode">Child mode</string>
    <string name="delete_history">Delete history</string>
    <string name="contacts">Contacts</string>
    <string name="search_on_map">Search on map</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_title_gps_turned_off">GPS Turned off</string>
    <string name="dialog_message_last_location_unknown">
       Last location are unknown. Turn on GPS if you want to get address</string>
    <string name="dialog_message_last_known_location">
The last known location is shown. Turn on GPS if you want to update your location</string>
    <string name="dialog_rationale_title">Access to geolocation</string>
    <string name="default_address">Address</string>
    <string name="button_search_map">Search</string>
    <string name="dialog_rationale_meaasge">You need to allow access to your location</string>
    <string name="dialog_rationale_give_access">Allow access</string>
    <string name="dialog_rationale_decline">Allow</string>
    <string name="dialog_address_title">Your address</string>


</resources>