<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding10dp"
            tools:context=".ui.main.view.MainFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/header_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:paddingEnd="5dp"
                    android:text="@string/new_movies_headline_text"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/favourite_icon"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/baseline_favorite_border_24" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/new_movies_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movies_img"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/movie_poster" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_end_10dp"
                    android:layout_weight="2"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/movie_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_genre"
                        android:textSize="@dimen/main_text" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/release_date"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/movies_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_2020"
                            android:textSize="@dimen/main_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"
                            android:textSize="@dimen/main_text" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@android:drawable/btn_star_big_on" />

                        <TextView
                            android:id="@+id/movie_rating_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate_demo_6_9"
                            android:textSize="@dimen/main_text" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/demo_movie_description"
                android:textSize="@dimen/main_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10_dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="Add Your Notes" />

                <EditText
                    android:id="@+id/editTextNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/button_save_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save" />




            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>



    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</FrameLayout>
